Code cosmetics, add javadoc